<resources>
    <string name="app_name">&appname;</string>
    <string name="app_email" translatable="false">balticit@inbox.lv</string>
    <string name="app_creator" translatable="false">Created by: Baltic Information Technologies</string>
    <string name="app_version" translatable="false">(Version code)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_about">About</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <string name="email_subject">Suggestion to improve App</string>
    <string name="email_body">Enter your message here</string>
    <string name="email_chooser_title">Send Email</string>
    <string name="fragment_about_about_text">About</string>
    <string name="fragment_about_app_functions">Do you want to learn more about app purpose?</string>
    <string name="fragment_about_have_suggestions">Do you have any questions, suggestions, found bugs, or you want to help test or translate? Write us a message.</string>
    <string name="fragment_about_enjoyed_app">If you enjoyed this application, please rate it. Thank you.</string>
    <string name="fragment_about_app_icon">App icon</string>
    <string name="fragment_about_email_icon">Email icon</string>
    <string name="fragment_about_google_icon">Google icon</string>
    <string name="fragment_about_send_icon">Send icon</string>
    <string name="fragment_about_terms_title">Terms of Service:</string>
    <string name="fragment_about_terms_text">
        \tThese Terms of Service (“Terms”) govern your access to and use of our services, including our various websites, SMS, APIs, email notifications, applications, buttons, widgets, ads, commerce services, and our other services that link to these Terms (collectively, the “Services”), and any information, text, links, graphics, photos, videos, or other materials or arrangements of materials uploaded, downloaded or appearing on the Services (collectively referred to as “Content”). By using the Services you agree to be bound by these Terms.
        \n\n\t<b>1. Who May Use the Services</b>
        \n\n\tYou may use the Services only if you agree to form a binding contract with &appname; and are not a person barred from receiving services under the laws of the applicable jurisdiction. If you are accepting these Terms and using the Services on behalf of a company, organization, government, or other legal entity, you represent and warrant that you are authorized to do so.
        \n\n\t<b>2. Privacy</b>
        \n\n\tYou understand that through your use of the Services you consent to the collection and use (as set forth in the Privacy Policy below) of this information, including the transfer of this information to the United States, European Union, and/or other countries for storage, processing and use by &appname; and its affiliates.
        \n\n\t<b>3. Content on the Services</b>
        \n\n\tYou are responsible for your use of the Services and for any Content you provide, including compliance with applicable laws, rules, and regulations. You should only provide Content that you are comfortable sharing with others.
        \n\n\tAny use or reliance on any Content or materials posted via the Services or obtained by you through the Services is at your own risk. We do not endorse, support, represent or guarantee the completeness, truthfulness, accuracy, or reliability of any Content or communications posted via the Services or endorse any opinions expressed via the Services. You understand that by using the Services, you may be exposed to Content that might be offensive, harmful, inaccurate or otherwise inappropriate, or in some cases, postings that have been mislabeled or are otherwise deceptive. All Content is the sole responsibility of the person who originated such Content. We may not monitor or control the Content posted via the Services and, we cannot take responsibility for such Content.
        \n\n\tWe reserve the right to remove Content at any moment, including for example, copyright or trademark violations, impersonation, unlawful conduct, or harassment.
        \n\n\t<b>Your Rights</b>
        \n\n\tYou retain your rights to any Content you submit, post or display on or through the Services. What’s yours is yours — you own your Content (and your photos and videos are part of the Content).
        \n\n\tBy submitting, posting or displaying Content on or through the Services, you grant us a worldwide, non-exclusive, royalty-free license (with the right to sublicense) to use, copy, reproduce, process, adapt, modify, publish, transmit, display and distribute such Content in any and all media or distribution methods (now known or later developed). This license authorizes us to make your Content available to the rest of the world and to let others do the same. You agree that this license includes the right for &appname; to provide, promote, and improve the Services and to make Content submitted to or through the Services available to other companies, organizations or individuals for the syndication, broadcast, distribution, promotion or publication of such Content on other media and services, subject to our terms and conditions for such Content use. Such additional uses by &appname;, or other companies, organizations or individuals, may be made with no compensation paid to you with respect to the Content that you submit, post, transmit or otherwise make available through the Services.
        \n\n\tYou understand that we may modify or adapt your Content as it is distributed, syndicated, published, or broadcast by us and our partners and/or make changes to your Content in order to adapt the Content to different media. You represent and warrant that you have all the rights, power and authority necessary to grant the rights granted herein to any Content that you submit.
        \n\n\t<b>4. Using the Services</b>
        \n\n\tOur Services evolve constantly. As such, the Services may change from time to time, at our discretion. We may stop (permanently or temporarily) providing the Services or any features within the Services to you or to users generally. We also retain the right to create limits on use and storage at our sole discretion at any time. We may also remove or refuse to distribute any Content on the Services, suspend or terminate users, and reclaim usernames without liability to you.
        \n\n\tIn consideration for &appname; granting you access to and use of the Services, you agree that &appname; and its third-party providers and partners may place advertising on the Services or in connection with the display of Content or information from the Services whether submitted by you or others. You also agree not to misuse our Services, for example, by interfering with them or accessing them using a method other than the interface and the instructions that we provide.
        \n\n\tYou may need to create an account to use some of our Services. You are responsible for safeguarding your account, so use a strong password and limit its use to this account. We cannot and will not be liable for any loss or damage arising from your failure to comply with the above.
        \n\n\tYou may end your legal agreement with &appname; at any time by deactivating your accounts and discontinuing your use of the Services.
        \n\n\t<b>5. Limitations of Liability</b>
        \n\n\tBy using the Services you agree that &appname;, its parents, affiliates, related companies, officers, directors, employees, agents representatives, partners and licensors, liability is limited to the maximum extent permissible in your country of residence.
        \n\n\t<b>6. General</b>
        \n\n\tWe may revise these Terms from time to time. By continuing to access or use the Services after those revisions become effective, you agree to be bound by the revised Terms.
        \n\n\tThese Terms are an agreement between you and &appname;.
        \n
    </string>
    <string name="intro_layout_one_image">Welcoming girls image</string>
    <string name="intro_layout_one_title">EuropeWelcome</string>
    <string name="intro_layout_one_text">EuropeWelcome is the first application to support people in asylum seeking and relocation to European Union</string>
    <string name="intro_layout_two_image">Happy african image</string>
    <string name="intro_layout_two_title">Strong Society</string>
    <string name="intro_layout_two_text">Become a member of helpful community, where people assist each other</string>
    <string name="intro_layout_three_image">Man with kid image</string>
    <string name="intro_layout_three_title">Children\'s rights</string>
    <string name="intro_layout_three_text">We are in hope of better future for the kids, their education and well-being</string>
    <string name="intro_layout_four_image">Soccer team image</string>
    <string name="intro_layout_four_title">Learn Europe</string>
    <string name="intro_layout_four_text">Learn about the life in Europe, it\'s countries, culture, people and official institutions</string>
    <string name="intro_layout_five_image">Nigerian girls image</string>
    <string name="intro_layout_five_title">Equality and Freedom</string>
    <string name="intro_layout_five_text">Europe is open to everybody, no matter of religion, color or sex</string>
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="rating_rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others to know about this app</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_type_suggestion">Type suggestion here</string>
    <string name="rating_later">Later</string>
    <string name="rating_submit">Submit</string>
    <string name="rating_not_provided_error">Please provide us stars</string>
    <string name="rating_thanks">Thank you for your feedback</string>
    <string name="login_empty_email">Please enter your Email</string>
    <string name="login_invalid_email">Please enter a valid Email</string>
    <string name="fragment_register_email">Email</string>
    <string name="fragment_register_password">Password</string>
    <string name="fragment_register_add_photo">Add Photo</string>
    <string name="fragment_register_name">Name</string>
    <string name="fragment_register_surname">Surname</string>
    <string name="fragment_register_gender">Your gender:</string>
    <string name="fragment_register_male">Male</string>
    <string name="fragment_register_female">Female</string>
    <string name="fragment_register_not_specified">Not specified</string>
    <string name="fragment_register_date_of_birth">Date of Birth:</string>
    <string name="fragment_register_d_m_y">Day Month Year</string>
    <string name="fragment_register_terms">Proceeding register you agree with <b>Terms of Service</b></string>
    <string name="fragment_register_register">Register</string>
</resources>